--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   display: block;
+  overflow: hidden;
 }
 #choose {
   display: none;
@@ -17,6 +18,7 @@
   height: 100vh;
   width: 100%;
   display: none;
+  overflow: hidden;
 }
 #ig_wrapper {
   margin: 0;
@@ -24,6 +26,7 @@
   height: 100vh;
   width: 100%;
   display: none;
+  overflow: hidden;
 }
 #choose_fb {
   width: 50px;
