--- a/css/index.css
+++ b/css/index.css
@@ -16,17 +16,15 @@
   margin: 0;
   padding: 0;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   display: none;
-  overflow: hidden;
 }
 #ig_wrapper {
   margin: 0;
   padding: 0;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   display: none;
-  overflow: hidden;
 }
 #choose_fb {
   width: 50px;
