--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   display: block;
-  overflow: hidden;
 }
 #choose {
   display: none;
@@ -16,15 +15,17 @@
   margin: 0;
   padding: 0;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: none;
+  position: fixed;
 }
 #ig_wrapper {
   margin: 0;
   padding: 0;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: none;
+  position: fixed;
 }
 #choose_fb {
   width: 50px;
