--- a/css/index.css
+++ b/css/index.css
@@ -14,16 +14,16 @@
 #fb_wrapper {
   margin: 0;
   padding: 0;
+  height: 100vh;
   width: 100%;
   display: none;
-  position: fixed;
 }
 #ig_wrapper {
   margin: 0;
   padding: 0;
+  height: 100vh;
   width: 100%;
   display: none;
-  position: fixed;
 }
 #choose_fb {
   width: 50px;
