working on overflow

--- a/css/fb_style.css
+++ b/css/fb_style.css
@@ -35,6 +35,11 @@
   color: #333;
 }
 
+#fb_wrapper {
+  align-items: center;
+  position: fixed;
+}
+
 #fbbody,
 .fbook {
   background-color: rgb(240 246 255);
