--- a/css/fb_style.css
+++ b/css/fb_style.css
@@ -35,27 +35,21 @@
   color: #333;
 }
 
-#fb_wrapper {
-  align-items: center;
-  position: fixed;
-}
-
 #fbbody,
 .fbook {
   background-color: rgb(240 246 255);
-  margin: 0;
+  margin: 0 auto;
   text-align: center;
   height: 100vh;
-  padding: 10px;
-  overflow: hidden;
+  padding: 20px;
 }
 
 #igbody,
 .instacss {
-  margin: 0;
+  margin: 0 auto;
   text-align: center;
   height: 100vh;
-  padding: 10px;
+  padding: 20px;
 }
 
 .toggle-password {
@@ -97,3 +91,43 @@
 }
 
 /* Instagram css begins */
+input {
+  font-style: ;
+  font-variant-ligatures: ;
+  font-variant-caps: ;
+  font-variant-numeric: ;
+  font-variant-east-asian: ;
+  font-variant-alternates: ;
+  font-variant-position: ;
+  font-weight: ;
+  font-stretch: ;
+  font-size: ;
+  font-family: ;
+  font-optical-sizing: ;
+  font-kerning: ;
+  font-feature-settings: ;
+  font-variation-settings: ;
+  text-rendering: auto;
+  color: fieldtext;
+  letter-spacing: normal;
+  word-spacing: normal;
+  line-height: normal;
+  text-transform: none;
+  text-indent: 0px;
+  text-shadow: none;
+  box-sizing: border-box;
+  display: inline-block;
+  text-align: start;
+  appearance: auto;
+  -webkit-rtl-ordering: logical;
+  cursor: text;
+  background-color: field;
+  margin: 0em;
+  padding: 1px 0px;
+  border-width: 2px;
+  border-style: inset;
+  border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
+  border-image: initial;
+  padding-block: 1px;
+  padding-inline: 2px;
+}
