--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,7 @@
   height: 100vh;
   width: 100%;
   display: none;
+  position: fixed;
 }
 #ig_wrapper {
   margin: 0;
@@ -24,6 +25,7 @@
   height: 100vh;
   width: 100%;
   display: none;
+  position: fixed;
 }
 #choose_fb {
   width: 50px;
