--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@
 #fb_wrapper {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: none;
   position: fixed;
